Convert to IIFE. Remove $scope. Change to controllerAs and bindToController. Capitalize controller name.

--- a/website/app/application/core/projects/project/home/directives/display-file-upload-entry.html
+++ b/website/app/application/core/projects/project/home/directives/display-file-upload-entry.html
@@ -13,7 +13,7 @@
         <small ng-show="file.error" class="mc-danger panel-element">
             <strong>Upload failed</strong>
         </small>
-        <a ng-click="removeFromUpload(file)">
+        <a ng-click="upload.removeFromUpload(file)">
             <i class="fa fa-fw fa-close mc-danger"></i>
         </a>
     </span>
