--- a/website/app/application/core/projects/project/home/directives/display-note.html
+++ b/website/app/application/core/projects/project/home/directives/display-note.html
@@ -1,9 +1,9 @@
 <div>
         <span ng-click="" class="pointer">
-            {{note.title | truncate:35:'...':true}}
+            {{note.note.title | truncate:35:'...':true}}
         </span>
         <p>
-            <small class="text-muted"><i class="fa fa-fw fa-user"></i> {{note.creator}} </small>
-            <small style="padding-left: 60px;" class="text-muted">{{note.mtime | toDateString}} </small>
+            <small class="text-muted"><i class="fa fa-fw fa-user"></i> {{note.note.creator}} </small>
+            <small style="padding-left: 60px;" class="text-muted">{{note.note.mtime | toDateString}} </small>
         </p>
 </div>
