--- a/website/app/application/core/projects/project/home/directives/display-review.html
+++ b/website/app/application/core/projects/project/home/directives/display-review.html
@@ -1,19 +1,19 @@
 <div>
         <span class="pointer"
               ng-click="">
-            {{review.title}}
+            {{view.review.title}}
         </span>
 
         <span class="pull-right">
-            <a ng-if="review.messages.length !== 0" class="fa-stack fa-2x">
+            <a ng-if="view.review.messages.length !== 0" class="fa-stack fa-2x">
                   <i style="color: #FDAC6B;" class="fa fa-comment fa-stack-1x"></i>
-                  <i style="font-size: 10px;" class="fa fa-stack-1x fa-inverse">{{review.messages.length}}</i>
+                  <i style="font-size: 10px;" class="fa fa-stack-1x fa-inverse">{{view.review.messages.length}}</i>
               </a>
         </span>
         <p>
             <small  class="text-muted">
-               <i class="fa fa-fw fa-user"></i> {{review.messages[(review.messages.length -1)].who}}
-                <small style="padding-left: 60px;">{{(review.messages[(review.messages.length -1)].date)}}</small>
+               <i class="fa fa-fw fa-user"></i> {{view.review.messages[(view.review.messages.length -1)].who}}
+                <small style="padding-left: 60px;">{{(view.review.messages[(view.review.messages.length -1)].date)}}</small>
             </small>
         </p>
 </div>
