Change to IIFE. Capitalized controller name.

--- a/website/app/application/core/projects/project/home/directives/display-sample.html
+++ b/website/app/application/core/projects/project/home/directives/display-sample.html
@@ -34,8 +34,10 @@
                                     <li ng-repeat="measure in property.measurements">
                                         <div>
                                             <display-measurement current-process="modal.item.process_id"
-                                                                 edit-measure="editMeasure" project="project"
-                                                                 measure="measure"></display-measurement>
+                                                                 edit-measure="editMeasure"
+                                                                 project="project"
+                                                                 measure="measure">
+                                            </display-measurement>
                                         </div>
                                     </li>
                                 </ul>
