--- a/website/app/application/core/projects/project/home/directives/file-upload-panel.html
+++ b/website/app/application/core/projects/project/home/directives/file-upload-panel.html
@@ -1,19 +1,19 @@
-<div ng-if="flow.files.length !== 0" style="border-bottom: 5px solid #d1d1d1;">
+<div ng-if="uploader.flow.files.length !== 0" style="border-bottom: 5px solid #d1d1d1;">
     <ul class="list-unstyled">
         <li class="home-item">
             <span>
                 <button class="btn btn-xs btn-mini btn-success"
-                        ng-click="flow.resume()"
-                        ng-show="!file.isUploading()">
+                        ng-click="uploader.flow.resume()"
+                        ng-show="!uploader.flow.isUploading()">
                     Upload All
                 </button>
                 <button class="btn btn-xs btn-mini btn-warning"
-                        ng-click="flow.pause()"
-                        ng-show="flow.isUploading()">
+                        ng-click="uploader.flow.pause()"
+                        ng-show="uploader.flow.isUploading()">
                     Pause
                 </button>
                 <button class="btn btn-xs btn-mini btn-danger"
-                        ng-click="flow.cancel()">
+                        ng-click="uploader.flow.cancel()">
                     Cancel All
                 </button>
             </span>
@@ -22,12 +22,11 @@
     </ul>
 
     <ul class="list-unstyled"
-        ng-repeat="(dir, files) in filesByDir">
+        ng-repeat="(dir, files) in uploader.filesByDir">
         <li class="home-item" style="background-color: #3E4B5C; color: white">
             <i class="fa fa-fw fa-folder"></i>{{dir}}
         </li>
-        <li class="home-item"
-            ng-repeat="file in files">
+        <li class="home-item" ng-repeat="file in files">
             <display-file-upload-entry file="file"></display-file-upload-entry>
         </li>
     </ul>
