--- a/website/app/application/core/projects/project/home/directives/home-files.html
+++ b/website/app/application/core/projects/project/home/directives/home-files.html
@@ -4,13 +4,10 @@
             <img style="height: 35px;padding-bottom: 10px;"
                  src="assets/img/splash/file_icon.png">
             <span style="color: #9F88C1; font-size: 20px;padding-left: 15px;">FILES</span>
-            <a ng-click="reloadFiles()" class="pull-right bar-control-left">
-                <i class="fa fa-fw fa-refresh" ng-class="{'fa-spin': isReloading}"></i>
-            </a>
         </div>
         <div class="panel-body home-panel-body no-max-height">
             <div style="padding: 20px;width: 100%; height: 100%;"
-                 angular-grid="gridOptions"
+                 angular-grid="files.gridOptions"
                  class="ag-file-browser">
             </div>
         </div>
