--- a/website/app/application/core/projects/project/home/directives/home-notes.html
+++ b/website/app/application/core/projects/project/home/directives/home-notes.html
@@ -5,13 +5,12 @@
                  src="assets/img/splash/note_icon.png">
             <span style="color: #7DAF50; font-size: 20px;padding-left: 15px;">NOTES</span>
         </div>
-        <div class="panel-body"
-             ng-class="{'no-max-height': isExpanded()}">
-            <div ng-if="project.notes.length!== 0" style="width: 100%;height:100%"
-                 angular-grid="gridOptions"
+        <div class="panel-body">
+            <div ng-if="view.project.notes.length!== 0" style="width: 100%;height:100%"
+                 angular-grid="view.gridOptions"
                  class="ag-fresh ag-basic">
             </div>
-            <div ng-if="project.notes.length === 0">
+            <div ng-if="view.project.notes.length === 0">
                 <p style="padding-left:20px;">No Notes.</p>
             </div>
         </div>
