--- a/website/app/application/core/projects/project/home/directives/home-processes.html
+++ b/website/app/application/core/projects/project/home/directives/home-processes.html
@@ -5,13 +5,12 @@
                  src="assets/img/splash/process-icon.png">
             <span style="color: #3A9EE3; font-size: 20px;padding-left: 15px;">PROCESSES</span>
         </div>
-        <div class="panel-body"
-             ng-class="{'no-max-height': isExpanded()}">
-            <div ng-if="project.processes.length!== 0" style="width: 100%;height:100%"
-                 angular-grid="gridOptions"
+        <div class="panel-body">
+            <div ng-if="view.project.processes.length!== 0" style="width: 100%;height:100%"
+                 angular-grid="view.gridOptions"
                  class="ag-fresh ag-basic">
             </div>
-            <div ng-if="project.processes.length === 0">
+            <div ng-if="view.project.processes.length === 0">
                 <p style="padding-left: 20px;">No Processes.</p>
             </div>
         </div>
