Add back deleted files (not converted to IIFE yet).

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -165,6 +165,7 @@
 <script src="application/core/account/apikey/apikey-controller.js"></script>
 <script src="application/core/account/templates/templates-controller.js"></script>
 <script src="application/core/machines/machines-controller.js"></script>
+<script src="application/core/projects/create.js"></script>
 <script src="application/core/projects/project/project-controller.js"></script>
 <script src="application/core/projects/project/project-nav-bar.js"></script>
 <script src="application/core/projects/project/home/home.js"></script>
