updates to the userguide

--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -116,23 +116,20 @@
 
                             <div class="watermark">Draft</div>
 
-                            <p>MaterialsCommons navigation bar helps user to navigate between global pages.</p>
+                            <p>MaterialsCommons navigation bar helps user to switch between different projects and navigate between global pages.</p>
 
                             <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/navbar1.png">
+                                <img class="img-responsive" src="assets/img/userguide/navigation-bar.png">
                             </div>
                             <b>Settings:</b>
 
                             <p>Apart from navigation user can also update their username, password, customize templates(
                                 for provenance) and reset apikey.
                             </p>
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive" src="assets/img/userguide/navbar-settings.png">
+                            </div>
 
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/navbar1.1.png">
-                            </div>
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/navbar1.2.png">
-                            </div>
                             <b>Help </b>
 
                             <p>Help page or Userguide is a manual which describes about what and how to use
@@ -140,80 +137,6 @@
                                 on the side, while the user can still work on their respective panels. </p>
                         </div>
                     </li>
-                    <li class="list-group-item">
-                        <i class=" fa fa-fw fa-briefcase"></i>
-                        <a ng-click="showProjectBar = !showProjectBar">Project Bar</a>
-
-                        <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="showProjectBar">
-                            <h4 class="text-center">Project Bar</h4>
-                            <hr/>
-                            <b>Switch Projects</b>
-
-                            <p>Projects bar indicates total number of projects user has created/shared. Dropdown menu
-                                will
-                                give you the list of project names. When you click on project name it will take you to
-                                the respective Homepage.</p>
-
-                            <div class="watermark">Draft</div>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/project-bar.png">
-                            </div>
-                            <b>Create New Project</b>
-
-                            <p>To Create a new project click on the drop-down menu and select button called "New
-                                Project" and enter the new project name.</p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/projectbar1.1.png">
-                            </div>
-
-                            <p>
-                                Bottom of the project taskbar has icons for 1) Drafts 2) Project Setting 3) Calendar 4)
-                                Panels
-                            </p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/project-bar-icons.png">
-                            </div>
-                            <b>Drafts</b>
-
-                            <p>Explained under processes section</p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/draft.png">
-                            </div>
-                            <b>Project Settings</b>
-
-                            <p>Project settings help project owner to give permission/access to view their project.
-                                Owner can add/remove the users depending on with whom he/she wanted to share
-                                their project. Currently When a project is shared everything inside the project is
-                                shared.</p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/access.png">
-                            </div>
-                            <b>Calendar</b>
-
-                            <div class="watermark">Draft</div>
-                            <p>
-                                Calendar helps user to keep track of the items created and how
-                                many of them were created. You can click on a particular day to filter out all the items
-                                created/updated on that day.To view all items click on "click filter" link.
-                            </p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/calendar.png">
-                            </div>
-                            <b>Panels</b>
-
-                            <p> Panels refer to sideboard, Reviews, Files, Samples, Notes, Processes.
-                                More information about these panels are discussed under
-                                respective sections of userguide.
-                            </p>
-                        </div>
-                    </li>
-
                     <li class="list-group-item">
                         <i class=" fa fa-fw fa-home"></i> <a ng-click="showHome = !showHome">Home
                         Page</a>
@@ -225,29 +148,8 @@
                                 Content inside panels changes with respect to the project. In this section we will
                                 describe
                                 about commonly used icons and their function.</p>
-                            <b>1. Add to Sideboard</b>
-
-                            <p>This icon helps to compare various items. When you click item will be added to the board.
-                                After you add all the items split the sideboard such that you can compare items
-                                side-by-side.
-                            </p>
-
                             <div class="watermark">Draft</div>
-                            <b>2. Search</b>
-
-                            <p>Search will filter out all the items matching the entered search name.</p>
-                            <b>3. Create</b>
-
-                            <p><a ng-click="showReviews = !showReviews">How to create Review</a></p>
-
-                            <p><a ng-click="showSamples = !showSamples">How to create Sample</a></p>
-
-                            <p><a ng-click="showNotes = !showNotes">How to create File</a></p>
-
-                            <p><a ng-click="showNotes = !showNotes">How to create Note</a></p>
-
-                            <p><a ng-click="showProvenance = !showProvenance">How to create Provenance</a></p>
-                            <img class="img-responsive" src="assets/img/userguide/home-annotated.png">
+                            <img class="img-responsive" src="assets/img/userguide/home-page.png">
                         </div>
                     </li>
                     <li class="list-group-item">
@@ -266,31 +168,15 @@
                             <div class="watermark">Draft</div>
 
                             <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/show-review.png">
+                                <img class="img-responsive" src="assets/img/userguide/reviews-view.png">
                             </div>
                             <b>How to create a review</b>
 
-                            <p>When you click Plus <i class="fa fa-plus"></i> icon it will open up a form where you can
+                            <p>When you click <b>create</b> button it will open up a form to the right where you can
                                 fill in the title, pick a user who has to review and add your comment. </p>
 
                             <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/create-rev.png">
-                            </div>
-                            <b>Attach samples/files/notes to review</b>
-
-                            <p>There is an option to attach samples/files/notes along with your comment. In order to
-                                attach click on the + sign of the respective item which will trigger and open up an
-                                option to add
-                                those items to your review. Example: If you want to attach a note, click on the + sign
-                                next to notes and then you will see options in the notes panel as shown in picture
-                                below. When you hit create it will create a
-                                review for a project and will be notified to the assignee under global-reviews( which is
-                                in
-                                navbar).
-                            </p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/create-review-note-annotated.png">
+                                <img class="img-responsive" src="assets/img/userguide/create-review.png">
                             </div>
                         </div>
                     </li>
@@ -305,66 +191,11 @@
 
                             <div class="watermark">Draft</div>
                             <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/show-sample.png">
-                            </div>
-                            <b id="createSample">How to create a sample</b>
-
-                            <p>When you click Plus <i class="fa fa-plus"></i> icon it will open up a form where you can
-                                fill in the name, alloy supplier and sample type. Icons annotated as 1, 2 and 3 (Image)
-                                are
-                                explained below:</p>
-                            <b>1. Composition</b>
-
-                            <p>When you click composition button, it will open up dropdown list of elements using which
-                                you can add composition to the sample</p>
-                            <b>2. Share across projects</b>
-
-                            <p>sample can be shared across various projects. So this icon helps you to associate
-                                sample across different projects.</p>
-                            <b>3. Sample note</b>
-
-                            <p>This icon helps you to add a notes to the sample which will appear under "Notes Panel"
-                            </p>
-
-                            <p>After you enter all the information then hit create which will add your new sample to the
-                                list.</p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/create-sample-annotated.png">
+                                <img class="img-responsive" src="assets/img/userguide/samples-view.png">
                             </div>
                         </div>
                     </li>
-                    <li class="list-group-item list-group-item">
-                        <i class=" fa fa-fw fa-edit"></i> <a ng-click="showNotes = !showNotes">Notes</a>
 
-                        <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="showNotes">
-                            <h4 class="text-center">Notes</h4>
-                            <hr/>
-                            <b>List: </b>
-
-                            <p>Panel will list all the notes created inside a project.
-                                A note can be created for a project/sample/file.
-                                When you click on the note title you can view detailed message.
-                            </p>
-
-                            <div class="watermark">Draft</div>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/show-notes.png">
-                            </div>
-                            <b>How to create a note</b>
-
-                            <p>When you click Plus <i class="fa fa-plus"></i> icon it will open up a form where you can
-                                fill in the title and detailed message in the note area.
-                                You can attach images/links and format your text. When you hit create it will create a
-                                note for a project and it will then appear on your list. </p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/create-note.png">
-                            </div>
-                            <p>Note creation for sample and file will be discussed under respective sections.</p>
-                        </div>
-                    </li>
                     <li class="list-group-item list-group-item">
                         <i class=" fa fa-fw fa-code-fork"></i> <a
                             ng-click="showProvenance = !showProvenance">Processes</a>
@@ -378,15 +209,9 @@
                             <div class="watermark">Draft</div>
 
                             <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/show-process.png">
+                                <img class="img-responsive" src="assets/img/userguide/process-view.png">
                             </div>
-                            <p>When you click on the process name, process details will be opened.
-                                Graph will briefly describe about what are the
-                                inputs to the process and outputs from the process.</p>
 
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/show-process1.1.png">
-                            </div>
                             <b>How to create a provenance:</b><br><br>
 
                             <b>Step1 : Choose Template</b>
@@ -400,71 +225,11 @@
 
                             <div style="padding-top: 10px;padding-bottom: 10px;">
                                 <img class="img-responsive"
-                                     src="assets/img/userguide/create-provenance/prov-choose-template.png">
+                                     src="assets/img/userguide/choose-template.png">
                             </div>
-                            <p>After you choose the template it will will show you what are the steps involved to create
-                                a
-                                provenance.</p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive" src="assets/img/userguide/create-provenance/prov-steps.png">
-                            </div>
-                            <b>Step2 : Process Details</b>
-
-                            <p>Here you have to fill in the process name( Experiment/Computation) which is a required
-                                field. And fill out other details as necessary.</p>
-
                             <div style="padding-top: 10px;padding-bottom: 10px;">
                                 <img class="img-responsive"
-                                     src="assets/img/userguide/create-provenance/process-step-annotated.png">
-                            </div>
-                            <b>Step2: Inputs</b>
-
-                            <p>Input Steps vary based on the template chosen. Here for the "APT Data Collection"
-                                template there are 3 sub steps under inputs.
-                                1) Choose a sample 2) Settings 3) Files</p>
-                            <b>1. Choose a Sample</b>
-
-                            <p>You can choose a sample from the available using dropdown menu or create a new
-                                sample </p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive"
-                                     src="assets/img/userguide/create-provenance/choose-sample-annotated.png">
-                            </div>
-                            <b>Settings</b>
-
-                            <p>Fill out settings as per the template</p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive"
-                                     src="assets/img/userguide/create-provenance/settings-annotated.png">
-                            </div>
-                            <b>Add Files</b>
-
-                            <p>Files can be added using files panel(project tree). All the files inside this panel will
-                                give you an
-                                option called "Add to process". By clicking this button you can add files to the
-                                provenance</p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive"
-                                     src="assets/img/userguide/create-provenance/input-files-annotated.png">
-                            </div>
-                            <b>Step3: Outputs</b>
-
-                            <p>Same as inputs</p>
-                            <b>Step 4: Submit</b>
-
-                            <p>In this step you can review all your content by clicking on checkbox. Then
-                                submit the provenance. After provenance is submitted you cannot make any
-                                modifications.So if you are not sure about any step you can save it as a draft which
-                                will save it in the list of drafts and make
-                                modifications at a later point.</p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive"
-                                     src="assets/img/userguide/create-provenance/submit-provenance-annotated.png">
+                                     src="assets/img/userguide/create-process.png">
                             </div>
                         </div>
                     </li>
